	  or checking, to maintain stats and renamed files
	* Don't try IPv6 on windows if it's not installed
	* move_storage fix
	* fixed potential crash on shutdown
	* fixed leaking exception from bdecode on malformed input
	* fixed bug where connection would hang when receiving a keepalive
	* fixed bug where an asio exception could be thrown when resolving
	  peer countries

release 0.14.2

	* added missing functions to the python bindings torrent_info::map_file,
	  torrent_info::map_block and torrent_info::file_at_offset.
	* removed support for boost-1.33 and earlier (probably didn't work)
	* fixed potential freezes issues at shutdown
	* improved error message for python setup script
	* fixed bug when torrent file included announce-list, but no valid
	  tracker urls
	* fixed bug where the files requested from web seeds would be the
	  renamed file names instead of the original file names in the torrent.
	* documentation fix of queing section
	* fixed potential issue in udp_socket (affected udp tracker support)
	* made name, comment and created by also be subject to utf-8 error
	  correction (filenames already were)
	* fixed dead-lock when settings DHT proxy
	* added missing export directives to lazy_entry
	* fixed disk cache expiry settings bug (if changed, it would be set
	  to the cache size)
	* fixed bug in http_connection when binding to a particular IP
	* fixed typo in python binding (torrent_handle::piece_prioritize should
	  be torrent_handle::piece_priorities)
	* fixed race condition when saving DHT state
	* fixed bugs related to lexical_cast being locale dependent
	* added support for SunPro C++ compiler
	* fixed bug where messeges sometimes could be encrypted in the
	  wrong order, for encrypted connections.
	* fixed race condition where torrents could get stuck waiting to
	  get checked
	* fixed mapped files bug where it wouldn't be properly restored
	  from resume data properly
	* removed locale dependency in xml parser (caused asserts on windows)